--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/skeleton.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <script src="app.js" defer></script>
+    <!-- <script src="app.js" defer></script> -->
+    <script src="practice/app copy.js" defer></script>
     <script
       src="https://kit.fontawesome.com/66b42f50eb.js"
       crossorigin="anonymous"
